syntax = "proto3";

package inventory;

message Empty {
}
message Product {
  string product_name = 1;
  int32 quantity = 2;
}

message ProductList {
  repeated Product products = 1;
}

service InventoryService {
  rpc GetProducts(Empty) returns (ProductList) {}
  rpc AddProducts(ProductList) returns (Empty) {}
}

service CatalogService {
  rpc AddProducts(ProductList) returns (Empty) {}
  rpc GetProducts(Empty) returns (ProductList) {}
}
